--- a/AskME/templates/main/login.html
+++ b/AskME/templates/main/login.html
@@ -8,11 +8,11 @@
         <h3>Log In</h3>
     </div>
 
-    <form class="needs-validation" style="width: max-content" novalidate>
+    <form class="needs-validation" method="post" style="width: max-content" novalidate>
         <div class="mb-3 row">
-            <label class="col-sm-4 col-form-label">Login</label>
+            <label for="user_login" class="col-sm-4 col-form-label">Login</label>
             <div class="col-sm-8">
-                <input type="text" class="form-control" id="validationCustom01" required>
+                <input type="text" class="form-control" id="user_login" required>
                 <div class="valid-feedback">
                     Ok
                 </div>
@@ -22,9 +22,9 @@
             </div>
         </div>
         <div class="mb-3 row">
-            <label class="col-sm-4 col-form-label">Password</label>
+            <label for="user_password" class="col-sm-4 col-form-label">Password</label>
             <div class="col-sm-8">
-                <input type="password" class="form-control" id="inputPassword2" required>
+                <input type="password" class="form-control" id="user_password" required>
                 <div class="valid-feedback">
                     Ok
                 </div>
@@ -35,6 +35,7 @@
         </div>
         <div class="mb-3 row" style="margin-top: 30px">
             <div class="col-auto">
+                {% csrf_token %}
                 <button class="btn btn-primary" type="submit">Log in!</button>
             </div>
             <a href="{% url "signup" %}" class="col-auto btn-group-vertical">create account</a>
