--- a/AskME/templates/main/login.html
+++ b/AskME/templates/main/login.html
@@ -8,7 +8,7 @@
         <h3>Log In</h3>
     </div>
 
-    <form class="needs-validation" method="post" style="width: max-content" novalidate>
+    <form class="needs-validation" style="width: max-content" novalidate>
         <div class="mb-3 row">
             <label for="user_login" class="col-sm-4 col-form-label">Login</label>
             <div class="col-sm-8">
@@ -35,7 +35,6 @@
         </div>
         <div class="mb-3 row" style="margin-top: 30px">
             <div class="col-auto">
-                {% csrf_token %}
                 <button class="btn btn-primary" type="submit">Log in!</button>
             </div>
             <a href="{% url "signup" %}" class="col-auto btn-group-vertical">create account</a>
